--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -146,7 +146,7 @@ $light-green: #f0f5f1; // Light green background
   top: 35px; /* Adjusted top position */
   left: 0;
   width: 100%;
-  z-index: 950;
+  z-index: 1050;
   transition: background-color 0.3s ease;
   padding: 15px 0;
   background-color: #fff;
